gen/CitationParser.py
# Generated from C:/Users/bochi/PycharmProjects/FlaskProject/antlr/Citation.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CitationParser ( Parser ):

    grammarFileName = "Citation.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "'\\uFF08'", "')'", "'\\uFF09'", 
                     "'.'", "','", "' '", "'\"'", "'[M]'", "':'", "'vol.'", 
                     "'no.'", "'pp.'", "'[J]'", "'\\u201C'", "'\\u201D'", 
                     "'In'", "'[C]'", "'//'", "'Retrieved from'", "'[Online].'", 
                     "'Available:'", "'[EB/OL]'", "'['", "']'", "'&'", "'and'", 
                     "'\\u548C'", "'-'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "LETTERS", "DIGIT", "WS" ]

    RULE_citation = 0
    RULE_bookCitation = 1
    RULE_apaBook = 2
    RULE_ieeeBook = 3
    RULE_gbtBook = 4
    RULE_journalCitation = 5
    RULE_apaJournal = 6
    RULE_ieeeJournal = 7
    RULE_gbtJournal = 8
    RULE_conferenceCitation = 9
    RULE_apaConference = 10
    RULE_ieeeConference = 11
    RULE_gbtConference = 12
    RULE_webCitation = 13
    RULE_apaWeb = 14
    RULE_ieeeWeb = 15
    RULE_gbtWeb = 16
    RULE_apaAuthors = 17
    RULE_apaAuthor = 18
    RULE_ieeeAuthors = 19
    RULE_ieeeAuthor = 20
    RULE_gbtAuthors = 21
    RULE_gbtAuthor = 22
    RULE_chineseName = 23
    RULE_englishNameIeee = 24
    RULE_englishNameApa = 25
    RULE_firstName = 26
    RULE_lastName = 27
    RULE_volume = 28
    RULE_issue = 29
    RULE_pages = 30
    RULE_url = 31
    RULE_venue = 32
    RULE_place = 33
    RULE_title = 34
    RULE_publisher = 35
    RULE_string = 36
    RULE_year = 37
    RULE_dates = 38

    ruleNames =  [ "citation", "bookCitation", "apaBook", "ieeeBook", "gbtBook", 
                   "journalCitation", "apaJournal", "ieeeJournal", "gbtJournal", 
                   "conferenceCitation", "apaConference", "ieeeConference", 
                   "gbtConference", "webCitation", "apaWeb", "ieeeWeb", 
                   "gbtWeb", "apaAuthors", "apaAuthor", "ieeeAuthors", "ieeeAuthor", 
                   "gbtAuthors", "gbtAuthor", "chineseName", "englishNameIeee", 
                   "englishNameApa", "firstName", "lastName", "volume", 
                   "issue", "pages", "url", "venue", "place", "title", "publisher", 
                   "string", "year", "dates" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    LETTERS=30
    DIGIT=31
    WS=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CitationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bookCitation(self):
            return self.getTypedRuleContext(CitationParser.BookCitationContext,0)


        def journalCitation(self):
            return self.getTypedRuleContext(CitationParser.JournalCitationContext,0)


        def conferenceCitation(self):
            return self.getTypedRuleContext(CitationParser.ConferenceCitationContext,0)


        def webCitation(self):
            return self.getTypedRuleContext(CitationParser.WebCitationContext,0)


        def getRuleIndex(self):
            return CitationParser.RULE_citation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCitation" ):
                listener.enterCitation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCitation" ):
                listener.exitCitation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCitation" ):
                return visitor.visitCitation(self)
            else:
                return visitor.visitChildren(self)




    def citation(self):

        localctx = CitationParser.CitationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_citation)
        try:
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.bookCitation()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.journalCitation()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 80
                self.conferenceCitation()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 81
                self.webCitation()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BookCitationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def apaBook(self):
            return self.getTypedRuleContext(CitationParser.ApaBookContext,0)


        def ieeeBook(self):
            return self.getTypedRuleContext(CitationParser.IeeeBookContext,0)


        def gbtBook(self):
            return self.getTypedRuleContext(CitationParser.GbtBookContext,0)


        def getRuleIndex(self):
            return CitationParser.RULE_bookCitation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBookCitation" ):
                listener.enterBookCitation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBookCitation" ):
                listener.exitBookCitation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBookCitation" ):
                return visitor.visitBookCitation(self)
            else:
                return visitor.visitChildren(self)




    def bookCitation(self):

        localctx = CitationParser.BookCitationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_bookCitation)
        try:
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.apaBook()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.ieeeBook()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 86
                self.gbtBook()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ApaBookContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def apaAuthors(self):
            return self.getTypedRuleContext(CitationParser.ApaAuthorsContext,0)


        def year(self):
            return self.getTypedRuleContext(CitationParser.YearContext,0)


        def title(self):
            return self.getTypedRuleContext(CitationParser.TitleContext,0)


        def publisher(self):
            return self.getTypedRuleContext(CitationParser.PublisherContext,0)


        def getRuleIndex(self):
            return CitationParser.RULE_apaBook

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterApaBook" ):
                listener.enterApaBook(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitApaBook" ):
                listener.exitApaBook(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitApaBook" ):
                return visitor.visitApaBook(self)
            else:
                return visitor.visitChildren(self)




    def apaBook(self):

        localctx = CitationParser.ApaBookContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_apaBook)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.apaAuthors()
            self.state = 90
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 91
            self.year()
            self.state = 92
            _la = self._input.LA(1)
            if not(_la==3 or _la==4):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 93
            self.match(CitationParser.T__4)
            self.state = 94
            self.title()
            self.state = 95
            self.match(CitationParser.T__4)
            self.state = 96
            self.publisher()
            self.state = 97
            self.match(CitationParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IeeeBookContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ieeeAuthors(self):
            return self.getTypedRuleContext(CitationParser.IeeeAuthorsContext,0)


        def title(self):
            return self.getTypedRuleContext(CitationParser.TitleContext,0)


        def publisher(self):
            return self.getTypedRuleContext(CitationParser.PublisherContext,0)


        def year(self):
            return self.getTypedRuleContext(CitationParser.YearContext,0)


        def getRuleIndex(self):
            return CitationParser.RULE_ieeeBook

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIeeeBook" ):
                listener.enterIeeeBook(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIeeeBook" ):
                listener.exitIeeeBook(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIeeeBook" ):
                return visitor.visitIeeeBook(self)
            else:
                return visitor.visitChildren(self)




    def ieeeBook(self):

        localctx = CitationParser.IeeeBookContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ieeeBook)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.ieeeAuthors()
            self.state = 100
            self.match(CitationParser.T__5)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 101
                self.match(CitationParser.T__6)
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 107
            self.match(CitationParser.T__7)
            self.state = 108
            self.title()
            self.state = 109
            self.match(CitationParser.T__7)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 110
                self.match(CitationParser.T__6)
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 116
            self.match(CitationParser.T__5)
            self.state = 117
            self.publisher()
            self.state = 118
            self.match(CitationParser.T__5)
            self.state = 119
            self.year()
            self.state = 120
            self.match(CitationParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GbtBookContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def gbtAuthors(self):
            return self.getTypedRuleContext(CitationParser.GbtAuthorsContext,0)


        def title(self):
            return self.getTypedRuleContext(CitationParser.TitleContext,0)


        def place(self):
            return self.getTypedRuleContext(CitationParser.PlaceContext,0)


        def publisher(self):
            return self.getTypedRuleContext(CitationParser.PublisherContext,0)


        def year(self):
            return self.getTypedRuleContext(CitationParser.YearContext,0)


        def pages(self):
            return self.getTypedRuleContext(CitationParser.PagesContext,0)


        def getRuleIndex(self):
            return CitationParser.RULE_gbtBook

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGbtBook" ):
                listener.enterGbtBook(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGbtBook" ):
                listener.exitGbtBook(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGbtBook" ):
                return visitor.visitGbtBook(self)
            else:
                return visitor.visitChildren(self)




    def gbtBook(self):

        localctx = CitationParser.GbtBookContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_gbtBook)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.gbtAuthors()
            self.state = 123
            self.match(CitationParser.T__4)
            self.state = 124
            self.title()
            self.state = 125
            self.match(CitationParser.T__8)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 126
                self.match(CitationParser.T__6)
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 132
            self.match(CitationParser.T__4)
            self.state = 133
            self.place()
            self.state = 134
            self.match(CitationParser.T__9)
            self.state = 135
            self.publisher()
            self.state = 136
            self.match(CitationParser.T__5)
            self.state = 137
            self.year()
            self.state = 138
            self.match(CitationParser.T__9)
            self.state = 139
            self.pages()
            self.state = 140
            self.match(CitationParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JournalCitationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def apaJournal(self):
            return self.getTypedRuleContext(CitationParser.ApaJournalContext,0)


        def ieeeJournal(self):
            return self.getTypedRuleContext(CitationParser.IeeeJournalContext,0)


        def gbtJournal(self):
            return self.getTypedRuleContext(CitationParser.GbtJournalContext,0)


        def getRuleIndex(self):
            return CitationParser.RULE_journalCitation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJournalCitation" ):
                listener.enterJournalCitation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJournalCitation" ):
                listener.exitJournalCitation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitJournalCitation" ):
                return visitor.visitJournalCitation(self)
            else:
                return visitor.visitChildren(self)




    def journalCitation(self):

        localctx = CitationParser.JournalCitationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_journalCitation)
        try:
            self.state = 145
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.apaJournal()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.ieeeJournal()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 144
                self.gbtJournal()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ApaJournalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def apaAuthors(self):
            return self.getTypedRuleContext(CitationParser.ApaAuthorsContext,0)


        def year(self):
            return self.getTypedRuleContext(CitationParser.YearContext,0)


        def title(self):
            return self.getTypedRuleContext(CitationParser.TitleContext,0)


        def venue(self):
            return self.getTypedRuleContext(CitationParser.VenueContext,0)


        def volume(self):
            return self.getTypedRuleContext(CitationParser.VolumeContext,0)


        def pages(self):
            return self.getTypedRuleContext(CitationParser.PagesContext,0)


        def issue(self):
            return self.getTypedRuleContext(CitationParser.IssueContext,0)


        def getRuleIndex(self):
            return CitationParser.RULE_apaJournal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterApaJournal" ):
                listener.enterApaJournal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitApaJournal" ):
                listener.exitApaJournal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitApaJournal" ):
                return visitor.visitApaJournal(self)
            else:
                return visitor.visitChildren(self)




    def apaJournal(self):

        localctx = CitationParser.ApaJournalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_apaJournal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.apaAuthors()
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 148
                self.match(CitationParser.T__6)
                self.state = 153
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 154
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 155
            self.year()
            self.state = 156
            _la = self._input.LA(1)
            if not(_la==3 or _la==4):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 157
                self.match(CitationParser.T__6)
                self.state = 162
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 163
            self.match(CitationParser.T__4)
            self.state = 164
            self.title()
            self.state = 165
            self.match(CitationParser.T__4)
            self.state = 166
            self.venue()
            self.state = 167
            self.match(CitationParser.T__5)
            self.state = 168
            self.volume()
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 169
                self.match(CitationParser.T__0)
                self.state = 170
                self.issue()
                self.state = 171
                self.match(CitationParser.T__2)


            self.state = 175
            self.match(CitationParser.T__9)
            self.state = 176
            self.pages()
            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 177
                self.match(CitationParser.T__4)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IeeeJournalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ieeeAuthors(self):
            return self.getTypedRuleContext(CitationParser.IeeeAuthorsContext,0)


        def title(self):
            return self.getTypedRuleContext(CitationParser.TitleContext,0)


        def venue(self):
            return self.getTypedRuleContext(CitationParser.VenueContext,0)


        def volume(self):
            return self.getTypedRuleContext(CitationParser.VolumeContext,0)


        def issue(self):
            return self.getTypedRuleContext(CitationParser.IssueContext,0)


        def pages(self):
            return self.getTypedRuleContext(CitationParser.PagesContext,0)


        def year(self):
            return self.getTypedRuleContext(CitationParser.YearContext,0)


        def getRuleIndex(self):
            return CitationParser.RULE_ieeeJournal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIeeeJournal" ):
                listener.enterIeeeJournal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIeeeJournal" ):
                listener.exitIeeeJournal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIeeeJournal" ):
                return visitor.visitIeeeJournal(self)
            else:
                return visitor.visitChildren(self)




    def ieeeJournal(self):

        localctx = CitationParser.IeeeJournalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ieeeJournal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.ieeeAuthors()
            self.state = 181
            self.match(CitationParser.T__5)
            self.state = 185
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 182
                self.match(CitationParser.T__6)
                self.state = 187
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 188
            self.match(CitationParser.T__7)
            self.state = 189
            self.title()
            self.state = 190
            self.match(CitationParser.T__7)
            self.state = 194
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 191
                self.match(CitationParser.T__6)
                self.state = 196
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 197
            self.match(CitationParser.T__5)
            self.state = 198
            self.venue()
            self.state = 199
            self.match(CitationParser.T__5)
            self.state = 203
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 200
                self.match(CitationParser.T__6)
                self.state = 205
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 206
            self.match(CitationParser.T__10)
            self.state = 207
            self.volume()
            self.state = 208
            self.match(CitationParser.T__5)
            self.state = 212
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 209
                self.match(CitationParser.T__6)
                self.state = 214
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 215
            self.match(CitationParser.T__11)
            self.state = 216
            self.issue()
            self.state = 217
            self.match(CitationParser.T__5)
            self.state = 221
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 218
                self.match(CitationParser.T__6)
                self.state = 223
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 224
            self.match(CitationParser.T__12)
            self.state = 225
            self.pages()
            self.state = 226
            self.match(CitationParser.T__5)
            self.state = 227
            self.year()
            self.state = 228
            self.match(CitationParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GbtJournalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def gbtAuthors(self):
            return self.getTypedRuleContext(CitationParser.GbtAuthorsContext,0)


        def title(self):
            return self.getTypedRuleContext(CitationParser.TitleContext,0)


        def venue(self):
            return self.getTypedRuleContext(CitationParser.VenueContext,0)


        def year(self):
            return self.getTypedRuleContext(CitationParser.YearContext,0)


        def volume(self):
            return self.getTypedRuleContext(CitationParser.VolumeContext,0)


        def issue(self):
            return self.getTypedRuleContext(CitationParser.IssueContext,0)


        def pages(self):
            return self.getTypedRuleContext(CitationParser.PagesContext,0)


        def getRuleIndex(self):
            return CitationParser.RULE_gbtJournal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGbtJournal" ):
                listener.enterGbtJournal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGbtJournal" ):
                listener.exitGbtJournal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGbtJournal" ):
                return visitor.visitGbtJournal(self)
            else:
                return visitor.visitChildren(self)




    def gbtJournal(self):

        localctx = CitationParser.GbtJournalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_gbtJournal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 230
            self.gbtAuthors()
            self.state = 231
            self.match(CitationParser.T__4)
            self.state = 232
            self.title()
            self.state = 233
            self.match(CitationParser.T__13)
            self.state = 237
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 234
                self.match(CitationParser.T__6)
                self.state = 239
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 240
            self.match(CitationParser.T__4)
            self.state = 241
            self.venue()
            self.state = 242
            self.match(CitationParser.T__5)
            self.state = 243
            self.year()
            self.state = 244
            self.match(CitationParser.T__5)
            self.state = 245
            self.volume()
            self.state = 246
            self.match(CitationParser.T__0)
            self.state = 247
            self.issue()
            self.state = 248
            self.match(CitationParser.T__2)
            self.state = 249
            self.match(CitationParser.T__9)
            self.state = 250
            self.pages()
            self.state = 251
            self.match(CitationParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConferenceCitationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def apaConference(self):
            return self.getTypedRuleContext(CitationParser.ApaConferenceContext,0)


        def ieeeConference(self):
            return self.getTypedRuleContext(CitationParser.IeeeConferenceContext,0)


        def gbtConference(self):
            return self.getTypedRuleContext(CitationParser.GbtConferenceContext,0)


        def getRuleIndex(self):
            return CitationParser.RULE_conferenceCitation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConferenceCitation" ):
                listener.enterConferenceCitation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConferenceCitation" ):
                listener.exitConferenceCitation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConferenceCitation" ):
                return visitor.visitConferenceCitation(self)
            else:
                return visitor.visitChildren(self)




    def conferenceCitation(self):

        localctx = CitationParser.ConferenceCitationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_conferenceCitation)
        try:
            self.state = 256
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 253
                self.apaConference()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 254
                self.ieeeConference()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 255
                self.gbtConference()
                pass

